example/slider.css
.slider {
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

.slider *,
.slider *:before,
.slider *:after {
    -webkit-box-sizing: inherit; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: inherit;    /* Firefox, other Gecko */
    box-sizing: inherit;         /* Opera/IE 8+ */
}

.flex-container a:active,
.flexslider a:active,
.flex-container a:focus,
.flexslider a:focus  {
    outline: none;
}

.flexslider .slides,
.flex-control-nav,
.flex-direction-nav {
    margin: 0;
    padding: 0;
    list-style: none;
}

.flexslider .slides > li {
    display: none;
}

.flexslider {
    margin: 0 0 5px 0;
    position: relative;
    zoom: 1;
}

.flexslider .slides {
    zoom: 1;
    text-align:center;
}

.flex-direction-nav a[href] {
    text-align: center;
    display: block;
    font-size: 0;
    width: 40px;
    height: 60px;
    position: absolute;
    /* overflow: hidden; */
    opacity: 0;
    cursor: pointer;
    color: #FFFFFF;
    color: rgba(255,255,255,0.8);
    opacity: 0.5;
    text-decoration: none !important;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    transition: all .3s ease;

    /* center vertical */
    top: 50%;
    -webkit-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);

    /* disappears on white */
    filter: glow(color=gray,strength=2), alpha(color=white,opacity=20);
    text-shadow: 1px 1px 3px rgba(0,0,0,0.3), -1px 1px 3px rgba(0,0,0,0.3);
}

.flex-direction-nav a[href]:active {
    color: #FFFFFF;
    color: rgba(255,255,255,0.8);
}

.flexslider .flex-prev {
    left: 0;
}

.flexslider .flex-next {
    right: 0;
}

.flexslider:hover .flex-next:hover,
.flexslider:hover .flex-prev:hover {
    filter: glow(color=gray,strength=2), alpha(color=white,opacity=50);
    opacity: 1;
}

.flex-direction-nav .flex-disabled {
    opacity: 0 !important;
    filter: alpha(opacity=0);
    cursor: default;
}

.flex-direction-nav a:before  {
    font-size: 80px;
    margin-top: -22px;
    width: 100%;
    display: block;
    font-family: Arial, sans-serif;
    font-weight: bold;
    content: '\2039'; /* &lang; */
  text-align: center;
}

.flex-direction-nav a.flex-next:before  {
    content: '\203A'; /* &rang; */
}

.flexslider.thumbs .flex-direction-nav a {
    width: 30px;
    height: 100%;
    top:0;
}

/* Everything but IE6-8 */
:root *> .flexslider.thumbs .flex-direction-nav a {
  top: 50%;
}

.flexslider.thumbs .flex-direction-nav a:before {
    font-size: 60px;
    margin-top: -8px;
}

.flexslider .flex-viewport {
    margin-bottom: 4px;
}

/* margins between slides */
.flexslider .slides > li {
    margin-right: 10px;
}

.flexslider.thumbs .slides > li {
    margin-right: 5px;
}

/* active thumb styles */
.flexslider.thumbs .flex-active-slide {
    position: relative;
}

/* active thumb styles */
.flexslider.thumbs .flex-active-slide:after {
    content: "";
    position: absolute;
    z-index: 10;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border: 2px solid #F59533;
}

/* 4:3 aspect ratio */
/* for best results use 4:3 ratio images */
.flex-viewport {
    padding-bottom: 75%;
    position: relative;
}

.flexslider .slides {
    position: absolute;
    top: 0;
    height: 100%;
  overflow: hidden;
}

.flexslider .slides > li {
    height: 100%;
    background-color: #ccc;
    overflow: hidden;
    position: relative;
    display:table-cell;
    vertical-align: middle;
}

.flexslider .slides > li > .caption {
    display: block;

    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#7c000000', endColorstr='#7c000000'); /* IE */
    background:rgba(0,0,0,0.5);
    color: #fff;
    position: absolute;
    bottom: -48px;
    left: 0;
    right: 0;
    white-space: normal;
    text-align: left;

    /* limit to 2 lines of text */
    font-size: 12px;
    line-height: 14px;
    max-height: 44px; /* line-height * 2 + padding */
    overflow: hidden;

    /* add 10px padding ... using border to prevent overflow issue */
    border: solid transparent;
    border-width: 8px 10px;

    /* create transition */
    -webkit-transition: bottom 300ms;
    -o-transition: bottom 300ms;
    transition: bottom 300ms;
}

.flexslider .slides > .current-slide > .caption {
    /* create transition */
    bottom: 0;
}

.flexslider.thumbs .slides > li > .caption {
    display: none;
}

.flexslider.thumbs .flex-viewport {
    padding-bottom: 60px;
}

.flexslider .slides > li > img {
    max-width: 100%;
    max-height: 100%;
    width: auto;
    height: auto;
    position: static;
}

/* fit-* classes */
.flexslider .slides > li > img.fit-width {
    width: 100%;
    height: auto;
    position:absolute;
    /* center */
    top: 0;
    left: 0;
}

/* Everything but IE6-8 */
:root *> .flexslider .slides > li > img.fit-width {
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.flexslider .slides > li > img.fit-height {
    height: 100%;
    width: auto;
}


/* youtube vids */
.flexslider .slides > li > .youtube {
    height: 100%;
    width: 100%;
    background-color: #000;
}



/*= INITIAL STYLES =*/
.slider-uninitialized {
    width: 100%;
    padding-bottom: 75%;
    position: relative;
}

.slider-uninitialized > .slides {
    list-style-type: none;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

.slider-uninitialized > .slides > li {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ccc;
}

.slider-uninitialized > .slides > li:first-child {
    z-index: 1;
}

.slider-uninitialized > .slides > li > img {
    max-width: 100%;
    max-height: 100%;

    /* center */
    position: absolute;
    top: 0;
    left: 0;
}

/* Everything but IE6-8 */
:root *> .slider-uninitialized > .slides > li > img {
    /* center */
    top: 50%;
    left: 50%;

    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.slider-uninitialized > .slides > li > .youtube {
    height: 100%;
    width: 100%;
    background-color: #000;
}

